--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^8.2.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "supabase": "^1.82.2",
     "tailwindcss": "^3.3.3"
   }
 }
