--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "stripe": "^12.16.0",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6"
   },
