--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-icons": "^4.10.1",
     "stripe": "^12.16.0",
     "tailwind-merge": "^1.14.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "supabase": "^1.82.2",
     "tailwindcss": "^3.3.3"
   }
