--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
     "stripe": "^12.16.0",
