--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6",
     "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
