--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@supabase/auth-helpers-react": "^0.4.1",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
-    "@types/node": "20.4.5",
+    "@types/node": "^20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
