--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "stripe": "^12.16.0",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6",
